--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,9 @@
                 <div class="flex items-center justify-between  overflow-hidden">
                     <div class="nav_bar w-full md:w-auto flex justify-between items-center">
                         <div class="shrink-0 pb-[10px] pt-[8px]">
-                            <img src="../assets/img/logo.png" alt="Logo" />
+                            <a href="../src/index.html">
+                                <img src="../assets/img/logo.png" alt="Logo" />
+                            </a>
                         </div>
                         <div class="nav__menu__btn " id="menu-btn">
                             <i class="ri-menu-line"></i>
