--- a/src/project.html
+++ b/src/project.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Plumber || About</title>
+    <title>Plumber || Project</title>
     <link href="../src/output.css" rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.0.0/fonts/remixicon.css" rel="stylesheet" />
@@ -32,7 +32,9 @@
                 <div class="flex items-center justify-between  overflow-hidden">
                     <div class="nav_bar w-full md:w-auto flex justify-between items-center">
                         <div class="shrink-0 pb-[10px] pt-[8px]">
-                            <img src="../assets/img/logo.png" alt="Logo" />
+                            <a href="../src/index.html">
+                                <img src="../assets/img/logo.png" alt="Logo" />
+                            </a>
                         </div>
                         <div class="nav__menu__btn " id="menu-btn">
                             <i class="ri-menu-line"></i>
