Updated code with new changes

--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,7 @@
                                     <a href="../src/blog.html" class="nav-link ">Blogs</a>
                                 </li>
                                 <li>
-                                    <a href="#contact" class="nav-link ">Contact</a>
+                                    <a href="../src/contact.html" class="nav-link ">Contact</a>
                                 </li>
 
                             </ul>
